bk_ida/gobmkida/c1/dfa_prepare_for_match
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/dfa_prepare_for_match/src/engine/matchpat.c:983:22: error: use of undeclared identifier 'aux_count'
*( int *)( ( char *)&aux_count + v1) = 3; 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/dfa_prepare_for_match/src/obj/1/matchpat.o] Error 1
